--- a/config.json
+++ b/config.json
@@ -10,5 +10,11 @@
   "redis": {
     "host": "localhost",
     "port": 6379
+  },
+  "email": {
+    "host": "smtp.gmail.com",
+    "port": 587,
+    "username": "samirhashemi7@gmail.com",
+    "password": "fkxm rqwe qufp gzvu"
   }
 }
