--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "db": {
-    "host": "localhost",
+    "host": "mysql",
     "port": 3306,
-    "database": "mysql",
+    "database": "questionnaire",
     "schema": "public",
     "user": "root",
     "password": "password"
   },
   "redis": {
-    "host": "localhost",
+    "host": "redis",
     "port": 6379
   },
   "email": {
